@@ -1,4 +1,5 @@
 0.04
+ - Update .travis.yml to reality.
 
 0.03 2015-10-13T11:39:00+02:00
  - Add tests for constructor.
